# CoppWrap

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
CoppWrap/: CMakeLists.txt  CoppWrap.cpp  CoppWrap.h
include/coro/: awaitify.hpp  coro_wrap.hpp  executor.hpp  function_traits.hpp  manual_executor.hpp  move_wrapper.hpp  thread_pool.hpp
include/libcopp/coroutine/: coroutine_context.h
include/libcopp/fcontext/: README.txt
include/libcopp/utils/config/: libcopp_build_features.h
src/coro/: CMakeLists.txt
src/libcopp/: CMakeLists.txt  Func.cmake
src/libcopp/coroutine/: coroutine_context.cpp
test/: CMakeLists.txt  test1.cpp  test2.cpp
